--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 15px;
 }
 
 .card_curso {
@@ -259,19 +259,24 @@ main {
 
 @media (max-width: 1300px) {
   .card_curso {
-    width: 30%;
+    width: 32.37%;
   }
 }
 
-@media (max-width: 985px) {
+@media (max-width: 1000px) {
   .card_curso {
-    width: 48%;
+    width: 42.82%;
+  }
+
+  .cards_curso {
+    margin: 0 5px;
   }
 }
 
-@media (max-width: 535px) {
+@media (max-width: 630px) {
   .card_curso {
     width: 100%;    
+    margin: 0 15px;
   }
 }
 
@@ -285,7 +290,7 @@ main {
 
 
 
-
+/* modelo de teste */
 
 .card_capa2 {
   display: flex;
@@ -298,7 +303,7 @@ main {
   
   position: relative;
   padding: 10px;
-  height: 210px;
+  height: 260px;
 }
 
 .card_capa2 h1 {
