--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ main {
   border-radius: 10px;
   padding: 15px;
   width: 100%;
+  text-align: center;
 }
 
 .filtro button {
@@ -105,7 +106,7 @@ main {
   display: flex;
   flex-direction: column;
   
-  width: 22%;
+  width: 24%;
   height: 100%;
   border-radius: 10px;
 }
@@ -178,7 +179,7 @@ main {
 .imagem_capa img {
   width: 100%;
   height: 100%;
-  opacity: 0.2;
+  opacity: 0.15;
 }
 
 .sem_turma, .sem_turma2 {
@@ -257,15 +258,15 @@ main {
 
 /* fim --- botões dos cards */
 
-@media (max-width: 1300px) {
+@media (max-width: 1500px) {
   .card_curso {
-    width: 32.37%;
+    width: 32%;
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1150px) {
   .card_curso {
-    width: 42.82%;
+    width: 48%;
   }
 
   .cards_curso {
